# prototype-sa

./: Dockerfile  README.md  app.py  docker-compose.yml  main.py  news.json  pyproject.toml  requirements.txt
